--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,71 +4,76 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
- 
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
-  <uses-permission android:name="android.permission.VIBRATE" />
- 
-  <permission
-    android:name="com.demo.lightspeedgcm.permission.C2D_MESSAGE"
-    android:protectionLevel="signature" />
-  <uses-permission
-    android:name="com.demo.lightspeedgcm.permission.C2D_MESSAGE" />
-  <uses-permission
-    android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
 
-  <application
-    android:icon="@drawable/icon_128x128"
-    android:label="@string/app_name"
-    android:allowBackup="true">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
-	  <meta-data android:name="com.arrownock.push.SERVICE_TYPE" android:value="GCM" />
-	  <meta-data android:name="com.arrownock.push.gcm.SENDER_ID" android:value="\ 48256094654" />
-	  <meta-data android:name="com.arrownock.push.APP_KEY" android:value="XZ4FhAQoXHwncXhc9Gzd1gtxFEGhK6qs"/>
-						
-	   <activity
-	      android:name="com.demo.lightspeedgcm.MainActivity"
-	      android:screenOrientation="portrait" 
-            android:theme="@android:style/Theme.NoTitleBar">
-	      <intent-filter>
-	        <action android:name="android.intent.action.MAIN" />
-	        <category android:name="android.intent.category.LAUNCHER" />
-	      </intent-filter>
-	    </activity>
+    <permission
+        android:name="com.demo.lightspeedgcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
 
-	    <activity
-	      android:name="com.demo.lightspeedgcm.PushActivity"
-		  android:screenOrientation="portrait" 
-          android:theme="@android:style/Theme.NoTitleBar">
-	    </activity>
-	    
-	    
-	    <receiver
-	      android:name="com.arrownock.push.AnPushGCMReceiver"
-	      android:permission="com.google.android.c2dm.permission.SEND" >
-	      <intent-filter>
-	        
-	        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-	        
-	        <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-	        <category android:name="com.demo.lightspeedgcm" />
-	      </intent-filter>
-	    </receiver>
-	    
-	    <receiver android:name=".ExtendedReceiver" >
-      		<intent-filter>
-        		<action android:name="com.arrownock.push.PushService.MSG_ARRIVAL" />
-      		</intent-filter>
-      		<meta-data
-        		android:name="com.arrownock.push.BroadcastReceiver.ArrivalActivity"
-        		android:value="com.demo.lightspeedgcm.MainActivity" />
-    	</receiver>
+    <uses-permission android:name="com.demo.lightspeedgcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
+    <application
+        android:name="MyApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/icon_128x128"
+        android:label="@string/app_name" >
+        <meta-data
+            android:name="com.arrownock.push.SERVICE_TYPE"
+            android:value="GCM" />
+        <meta-data
+            android:name="com.arrownock.push.gcm.SENDER_ID"
+            android:value="\ 48256094654" />
+        <meta-data
+            android:name="com.arrownock.push.APP_KEY"
+            android:value="XZ4FhAQoXHwncXhc9Gzd1gtxFEGhK6qs" />
 
-	    
-	    
-	    <service android:name="com.arrownock.push.GCMIntentService" />
-   </application>
- </manifest>
+        <activity
+            android:name="com.demo.lightspeedgcm.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.demo.lightspeedgcm.PushActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+
+        <receiver
+            android:name="com.arrownock.push.AnPushGCMReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.demo.lightspeedgcm" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".ExtendedReceiver" >
+            <intent-filter>
+                <action android:name="com.arrownock.push.PushService.MSG_ARRIVAL" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.arrownock.push.BroadcastReceiver.ArrivalActivity"
+                android:value="com.demo.lightspeedgcm.MainActivity" />
+        </receiver>
+
+        <service android:name="com.arrownock.push.GCMIntentService" />
+        <meta-data android:name="com.crashlytics.ApiKey" android:value="20859af3fc773b4c803ed31a49612d93c763ee1a"/>
+    </application>
+
+</manifest>
