--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <permission
         android:name="com.demo.lightspeedgcm.permission.C2D_MESSAGE"
@@ -30,10 +32,10 @@
             android:value="GCM" />
         <meta-data
             android:name="com.arrownock.push.gcm.SENDER_ID"
-            android:value="\ 48256094654" />
+            android:value="\ " />
         <meta-data
-            android:name="com.arrownock.push.APP_KEY"
-            android:value="XZ4FhAQoXHwncXhc9Gzd1gtxFEGhK6qs" />
+            android:name="com.arrownock.APP_KEY"
+            android:value="" />
 
         <activity
             android:name="com.demo.lightspeedgcm.MainActivity"
@@ -72,7 +74,6 @@
         </receiver>
 
         <service android:name="com.arrownock.push.GCMIntentService" />
-        <meta-data android:name="com.crashlytics.ApiKey" android:value="20859af3fc773b4c803ed31a49612d93c763ee1a"/>
     </application>
 
 </manifest>
