--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:value="\ " />
         <meta-data
             android:name="com.arrownock.APP_KEY"
-            android:value="" />
+            android:value= "@string/app_key" />
 
         <activity
             android:name="com.demo.lightspeedgcm.MainActivity"
